Add `-Djava.security.manager=allow` that is needed too